# Fusion4D

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  conanfile.py
ConfigFileExamples/: OfflineFolderFusion_upperbody.cfg  old_3DTelecommunications.cfg
DeformableFusion/: DeformableFusionDemo.sln
DeformableFusion/Basics/: KL_features.cpp  KL_features.h  TSDF.cpp  TSDF.h  basic_geometry.h  basic_geometry.hpp  basic_structure.h  normal_estimation.h  stdafx.h  surface_misc.h  surface_misc.hpp  visual_feature_matching.h
DeformableFusion/CSurface/: CIsoSurface.cpp  CIsoSurface.h  CPointCloud.hpp  CSurface.h  CSurface.hpp
DeformableFusion/CameraView/: CameraView.cpp  CameraView.h
DeformableFusion/Common/cuda/: helper_cuda.h
DeformableFusion/DeformableFusionDemo/: DeformableFusionDemo.cpp  Live3DViewer.cpp  Live3DViewer.h  SurfacePreview.cpp  SurfacePreview.h
DeformableFusion/FastNonrigidMatching/: BlockedHessianMatrix.h  CMotionFieldEstimationF2F.cpp  CMotionFieldEstimationF2F.h  CudaTextureHandles.cu  CudaTextureHandles.h  DeformGraphCudaImpl.cu  DeformGraphCudaImpl.cuh  DeformGraphCudaImpl_GPU.cu  DeformGraphCudaImpl_GPU.cuh  DeformGraphCuda_GPU.cpp  DeformGraphCuda_GPU.h  EDMatchingHelperCudaImpl.cu  EDMatchingHelperCudaImpl.cuh  EDMatchingHelperCudaImplInit.cu  EDMatchingHelperCudaImplInit_v2.cu  EDMatchingHelperCudaImplInit_v2_reg.cu  EDMatchingHelperCudaImplRegTerm.cu  EDMatchingHelperCudaImpl_GPU.cu  EDMatchingHelperCudaImpl_GPU.cuh  EDMatchingHelperCudaImpl_keypts.cu  EDMatchingHelperCudaImpl_residual.cu  EDMatchingHelperCudaImpl_rigid.cu  EDMatchingHelperCudaImpl_visualhull.cu  EDMatchingHelperCuda_GPU.cpp  EDMatchingHelperCuda_GPU.h  EDMatchingLSQProblemCuda.h  Fusion4DGPUKeyFrames.cpp  Fusion4DGPUKeyFrames.h  NormalEquationSolverPCGCuda.cu  NormalEquationSolverPCGCuda.h  NormalEquationSolverPCGCuda_GPU.cu  NormalEquationSolverPCGCuda_GPU.h  PCGCuda.cu  PCGCuda.cuh  PCGCuda_GPU.cu  PCGCuda_GPU.cuh  cuda_math_common.cuh  cuda_matrix_fixed.cuh  geometry_types_cuda.h  lmsolver.h  (+16 more)
DeformableFusion/FusionDemo-MultiView/: FusionConfig.h  FusionGlobals.cpp
DeformableFusion/NonRigidMatch/: DeformGraphCore.h  DeformationGraphOptBasic.h  DeformationGraphOptBasic_ceres.cpp  DeformationGraphOptPlus_ceres.cpp  LMICP.cpp  affines_nonrigid_pw_opt.cpp  affines_nonrigid_pw_opt.h  nonrigid_matching_surface.cpp  nonrigid_matching_surface.h
DeformableFusion/Utility/: CConnectedComponent.h  CDepthBias.h  MorphologicalOperation.cpp  MorphologicalOperation.h  UtilMatrix.cpp  UtilMatrix.h  UtilVnlMatrix.cpp  UtilVnlMatrix.h  UtilVnlMatrix.hpp  VecOperation.inl  VilToOpenCv.h  VoxelMatrix.h  iniFileParser.cpp  stdafx.h
McLib2/LibUtility/include/: TimeUtil.h
McLib2/LibUtility/src/: TimeUtil.cpp
docs/: README.md  color-depth-resolution-coupling.md  image-distortion-handling.md  mesh-coloring-and-texturing.md
include/compat/: DirectXMath.h  LinuxCompat.h  Windows.h
include/fusion4d_core/: fusion4d_core.h
src/: fusion4d_core.cpp
